got coloring, alignment, images correct

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,7 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&display=swap");
-$secondary-color: rgb(90, 89, 89);
-$primary-color: rgb(46, 30, 12);
-$tertiary-color: rgb(134, 106, 45);
+$primary-color: #0c1b33;
+$secondary-color: #5b85aa;
+$tertiary-color: #b4edd2;
+
+$dark: rgba(28, 29, 33, 1);
+$light: rgba(238, 238, 247, 1);
 
 * {
   margin: 0;
@@ -10,10 +13,12 @@ $tertiary-color: rgb(134, 106, 45);
 }
 
 body {
+  margin: 0;
+  padding: 0;
   font-family: "Merriweather", serif;
-  background: url("../images/background-blur-bright-684314.jpg");
-  background-size: cover;
   line-height: 1.5;
+  color: $primary-color;
+  background-color: $light;
 }
 
 header {
@@ -23,71 +28,116 @@ header {
   justify-content: space-between;
   flex-wrap: wrap;
   align-items: center;
-  background-color: $secondary-color;
+  background-color: $primary-color;
+  box-shadow: 0 5px 35px rgba(146, 204, 206, 0.4);
 
   h1 {
     color: $tertiary-color;
-    background-color: $primary-color;
+    background-color: $secondary-color;
     padding: 5px 1% 5px 6%;
     margin: 0;
     font-size: 4vw;
     line-height: 1;
   }
-  nav {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+}
 
-    a {
-      text-decoration: none;
-      text-transform: uppercase;
-      color: $tertiary-color;
-      margin-right: 10px;
-      background-color: $primary-color;
-      background-size: 100% 0.2em;
-      background-position: bottom;
-      transition: all 0.25s ease-in;
-      font-size: 1.4rem;
+nav {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 
-      :hover {
-        background-size: 100% 100%;
-        color: $secondary-color;
-      }
+  a {
+    text-decoration: none;
+    text-transform: uppercase;
+    color: $secondary-color;
+    margin-right: 10px;
+    background-image: linear-gradient(
+      270deg,
+      $secondary-color 0%,
+      $secondary-color 100%
+    );
+    background-repeat: no-repeat;
+    background-size: 100% 0.2em;
+    background-position: bottom;
+    transition: all 0.25s ease-in;
+    font-size: 1.4rem;
 
-      :last-child {
-        margin-right: 0;
-      }
+    :hover {
+      background-size: 100% 100%;
+      color: $secondary-color;
+    }
+
+    :last-child {
+      margin-right: 0;
     }
   }
 }
 
+main {
+  margin-top: 20px;
+  margin-bottom: 45px;
+}
+
 .main-section {
   max-width: 88%;
-  margin: 0 auto 0 auto;
-}
-.page-section {
-  margin: 25px 0;
-  padding: 10px 0;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: stretch;
-  justify-content: space-between;
+  margin-left: auto;
+  margin-right: auto;
 
-  h2 {
-    flex: 0 0 20%;
-    text-align: right;
-    padding-right: 15px;
-    border-right: 4px solid $primary-color;
-    font-size: 4vw;
-    line-height: 1.1;
+  .page-section {
+    margin: 25px 0;
+    padding: 10px 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: stretch;
+    justify-content: space-between;
+
+    h2 {
+      flex: 0 0 20%;
+      text-align: right;
+      padding-right: 15px;
+      border-right: 4px solid $primary-color;
+      font-size: 4vw;
+      line-height: 1.1;
+    }
+
+    div {
+      flex: 0 0 77%;
+    }
+
+    p {
+      margin-bottom: 20px;
+    }
   }
+}
+
+.hero-banner {
+  background: rgb(68, 88, 120);
+  background-image: url("../images/the-night-sky-pictures.jpg"),
+    linear-gradient(180deg, $secondary-color 0%, $primary-color 100%);
+  background-size: cover;
+  background-position: center;
+  background-blend-mode: soft-light;
+  min-height: 30vh;
+  color: var(--light);
+  padding: 2% 6%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  text-align: right;
 
   div {
-    flex: 0 0 77%;
+    flex: 0 0 90%;
   }
 
-  p {
-    margin-bottom: 20px;
+  h2 {
+    background-color: $secondary-color;
+    color: $tertiary-color;
+    margin: 0;
+    padding: 5px 10px;
+    font-size: 2.3rem;
+    line-height: 1.2;
+    display: inline;
   }
 }
 
@@ -101,22 +151,6 @@ header {
   grid-auto-rows: minmax(150px, 1fr);
 }
 
-.grid-item {
-  border: 5px solid $primary-color;
-  grid-column: span 4;
-  background-color: $secondary-color;
-  color: $tertiary-color;
-  min-height: 150px;
-  display: flex;
-  align-items: flex-end;
-  padding: 0 0 20px 0;
-  text-decoration: none;
-  background-blend-mode: soft-light;
-  background-size: 150%;
-  transition: all 0.5s;
-  font-size: 0.9rem;
-}
-
 .grid-item:first-child {
   grid-column: span 8;
   grid-row: span 2;
@@ -127,13 +161,28 @@ header {
   cursor: pointer;
 }
 
-.grid-item div {
-  background-color: $primary-color;
-  padding: 8px 10px;
-}
 .grid-item {
-  h3 {
-    font-size: 1.6rem;
+  border: 5px solid $secondary-color;
+  grid-column: span 4;
+  background-color: $primary-color;
+  color: $tertiary-color;
+  min-height: 150px;
+  display: flex;
+  align-items: flex-end;
+  padding: 0 0 20px 0;
+  text-decoration: none;
+  background-blend-mode: soft-light;
+  background-size: 100%;
+  transition: all 0.5s;
+  font-size: 0.9rem;
+
+  div {
+    background-color: $secondary-color;
+    padding: 8px 10px;
+
+    h3 {
+      font-size: 1.6rem;
+    }
   }
 }
 
@@ -146,7 +195,7 @@ header {
     height: 100%;
 
     a {
-      color: $tertiary-color;
+      color: $primary-color;
       padding: 5px;
       text-decoration: none;
       font-size: 1.3rem;
@@ -157,14 +206,67 @@ header {
       transition: all 0.25s ease-in;
       margin: 0 0.2rem 0.1rem;
       display: inline-block;
-
-      :hover {
-        background-size: 100% 88%;
-        color: $primary-color;
-      }
+    }
+    a:hover {
+      background-size: 100% 88%;
+      color: $secondary-color;
     }
   }
 }
 
+.meal-queue {
+  background-image: url("../images/mealQ.jpg");
+}
+
 @media screen and (max-width: 980px) {
+  header {
+    padding: 0 0 10px 0;
+    justify-content: center;
+    text-align: center;
+
+    h1 {
+      width: 100%;
+      padding: 5px;
+      margin-bottom: 10px;
+      font-size: 10vw;
+    }
+
+    nav {
+      justify-content: center;
+    }
+  }
+
+  .page-section {
+    h2,
+    div {
+      flex: 0 0 100%;
+    }
+
+    h2 {
+      border-right: none;
+      border-bottom: 4px solid $primary-color;
+      margin-bottom: 20px;
+      text-align: left;
+      font-size: 70vw;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .grid-item {
+    :first-child {
+      grid-column: 1 / -1;
+    }
+  }
+
+  .project-container {
+    grid-auto-rows: minmax(200px, 1fr);
+  }
+
+  .contact-info {
+    address {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  }
 }
